<resources>

    <string name="intervall">Intervall</string>
    <string name="app_name">Intervall</string>
    <string name="parcial_2">Parcial 2</string>
    <string name="mi_nombre">Laura valentina guarin sanchez</string>
    <string name="registro">Registrate</string>
    <string name="textoIntroductorio">Inicia una nueva aventura con CodeNative y descubre una nueva forma de ver el mundo</string>
    <string name="comienza">Comienza</string>
    <string name="texto_bienvenida_login">La aventura está por iniciar, por favor inicia sesión</string>
    <string name="ingresar">Ingresar</string>
    <string name="resetPasswordLabel">Recupera tu contraseña</string>
    <string name="imgIcono">Icon imagen</string>
    <string name="imgLogin">Imagen de credenciales</string>
    <string name="inputUserNameLabel">Usuario</string>
    <string name="inputUserPasswordLabel">Contraseña</string>
    <string name="ingresa_google">Ingresa con Google</string>
    <string name="sin_cuenta">¿No tienes cuenta?</string>
    <string name="descripcion_registro">Completa el formulario para crear tu cuenta</string>
    <string name="enviar">Enviar</string>
    <string name="correo_recuperacion">¿Olvidaste tu contraseña? Ingresa tu correo para enviarte el proceso de recuperación.</string>
    <string name="Inicio_Sesion">Inicio de Sesion</string>
    <string name="Regresar_login">Regresar al Login</string>
    <string name="usuario">usuario</string>
    <string name="contraseña">contraseña</string>
    <string name="Analisis">analisis\n</string>
    <string name="Historico">Historicos\n</string>
    <string name="MisDatos">Mis datos\n</string>

</resources>